--- a/ui/ui_geoodk_import.ui
+++ b/ui/ui_geoodk_import.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>517</width>
+    <width>499</width>
     <height>651</height>
    </rect>
   </property>
@@ -19,6 +19,12 @@
   <layout class="QGridLayout" name="gridLayout_7">
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -81,9 +87,6 @@
              <enum>QFrame::Plain</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
-             <item row="3" column="0">
-              <widget class="QListWidget" name="lst_widget"/>
-             </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_4">
                <property name="text">
@@ -94,46 +97,38 @@
                </property>
               </widget>
              </item>
+             <item row="1" column="0">
+              <widget class="Line" name="line">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="0">
               <layout class="QGridLayout" name="gridLayout_3">
-               <item row="1" column="1">
-                <widget class="QLineEdit" name="txt_count">
-                 <property name="enabled">
-                  <bool>false</bool>
-                 </property>
-                 <property name="minimumSize">
-                  <size>
-                   <width>0</width>
-                   <height>30</height>
-                  </size>
-                 </property>
-                 <property name="maxLength">
-                  <number>25</number>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0">
-                <widget class="QLabel" name="label">
-                 <property name="text">
-                  <string>Available records in the current directory:</string>
-                 </property>
-                </widget>
-               </item>
                <item row="0" column="0" colspan="2">
                 <layout class="QGridLayout" name="gridLayout_2">
-                 <item row="1" column="1">
-                  <widget class="QLineEdit" name="txt_directory">
+                 <item row="3" column="1">
+                  <widget class="QLineEdit" name="txt_filter">
                    <property name="minimumSize">
                     <size>
-                     <width>0</width>
+                     <width>30</width>
                      <height>30</height>
                     </size>
                    </property>
-                   <property name="readOnly">
-                    <bool>true</bool>
+                  </widget>
+                 </item>
+                 <item row="3" column="0">
+                  <widget class="QLabel" name="label_14">
+                   <property name="text">
+                    <string>Filter text(optional)</string>
                    </property>
-                   <property name="placeholderText">
-                    <string>Path to the collected data</string>
+                  </widget>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_3">
+                   <property name="text">
+                    <string>Select Profile</string>
                    </property>
                   </widget>
                  </item>
@@ -144,7 +139,68 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="2" column="1">
+                 <item row="3" column="2">
+                  <widget class="QLabel" name="label">
+                   <property name="text">
+                    <string>Records Found:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="3" column="3">
+                  <widget class="QLineEdit" name="txt_count">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="minimumSize">
+                    <size>
+                     <width>0</width>
+                     <height>30</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>30</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <property name="maxLength">
+                    <number>25</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="1" colspan="2">
+                  <widget class="QLineEdit" name="txt_directory">
+                   <property name="minimumSize">
+                    <size>
+                     <width>200</width>
+                     <height>30</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>1000007</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <property name="readOnly">
+                    <bool>true</bool>
+                   </property>
+                   <property name="placeholderText">
+                    <string>Path to the collected data</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1" colspan="3">
+                  <widget class="QComboBox" name="cbo_profile">
+                   <property name="minimumSize">
+                    <size>
+                     <width>0</width>
+                     <height>30</height>
+                    </size>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="3">
                   <widget class="QPushButton" name="btn_chang_dir">
                    <property name="minimumSize">
                     <size>
@@ -166,33 +222,12 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="0" column="1">
-                  <widget class="QComboBox" name="cbo_profile">
-                   <property name="minimumSize">
-                    <size>
-                     <width>0</width>
-                     <height>30</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_3">
-                   <property name="text">
-                    <string>Select Profile</string>
-                   </property>
-                  </widget>
-                 </item>
                 </layout>
                </item>
               </layout>
              </item>
-             <item row="1" column="0">
-              <widget class="Line" name="line">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-              </widget>
+             <item row="3" column="0">
+              <widget class="QListWidget" name="lst_widget"/>
              </item>
             </layout>
            </widget>
