--- a/ui/wizard/ui_entity_attributes_editor.ui
+++ b/ui/wizard/ui_entity_attributes_editor.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>302</width>
+    <width>361</width>
     <height>359</height>
    </rect>
   </property>
@@ -14,11 +14,20 @@
    <string>Custom Attributes Editor</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <property name="leftMargin">
+    <number>9</number>
+   </property>
    <item row="0" column="0" colspan="2">
     <layout class="QVBoxLayout" name="vlNotification"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label">
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="text">
       <string>Tenure type:</string>
      </property>
