--- a/ui/ui_geoodk_import.ui
+++ b/ui/ui_geoodk_import.ui
@@ -66,7 +66,11 @@
               </widget>
              </item>
              <item row="1" column="0">
-              <widget class="QTextEdit" name="txt_feedback"/>
+              <widget class="QTextEdit" name="txt_feedback">
+               <property name="readOnly">
+                <bool>true</bool>
+               </property>
+              </widget>
              </item>
              <item row="3" column="0">
               <widget class="QProgressBar" name="pgbar">
